Fix Spring CompatibilityNotMetException